// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods records 1`] = `
Array [
  Object {
    "appliedat": 2020-01-01T00:00:00.000Z,
    "appliedby": "Synor",
    "dirty": false,
    "executiontime": 0,
    "hash": "",
    "id": 1,
    "title": "Base Migration",
    "type": "do",
    "version": "0",
  },
  Object {
    "appliedat": 2020-01-01T00:00:00.000Z,
    "appliedby": "Jest",
    "dirty": false,
    "executiontime": 0,
    "hash": "hash-01-do",
    "id": 2,
    "title": "Test One",
    "type": "do",
    "version": "01",
  },
  Object {
    "appliedat": 2020-01-01T00:00:00.000Z,
    "appliedby": "Jest",
    "dirty": true,
    "executiontime": 0,
    "hash": "hash-01-undo",
    "id": 3,
    "title": "Test One",
    "type": "undo",
    "version": "01",
  },
]
`;

exports[`methods repair 1`] = `
Array [
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Synor",
    "dirty": false,
    "execution_time": 0,
    "hash": "",
    "id": 1,
    "title": "Base Migration",
    "type": "do",
    "version": "0",
  },
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Jest",
    "dirty": false,
    "execution_time": 0,
    "hash": "hash-01-do-repaired",
    "id": 2,
    "title": "Test One",
    "type": "do",
    "version": "01",
  },
]
`;

exports[`methods run (with body) 1`] = `
Array [
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Synor",
    "dirty": false,
    "execution_time": 0,
    "hash": "",
    "id": 1,
    "title": "Base Migration",
    "type": "do",
    "version": "0",
  },
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Jest",
    "dirty": false,
    "execution_time": 0,
    "hash": "hash-01-do",
    "id": 2,
    "title": "Test One",
    "type": "do",
    "version": "01",
  },
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Jest",
    "dirty": true,
    "execution_time": 0,
    "hash": "hash-01-undo",
    "id": 3,
    "title": "Test One",
    "type": "undo",
    "version": "01",
  },
]
`;

exports[`methods run (with run) 1`] = `
Array [
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Synor",
    "dirty": false,
    "execution_time": 0,
    "hash": "",
    "id": 1,
    "title": "Base Migration",
    "type": "do",
    "version": "0",
  },
  Object {
    "applied_at": 2020-01-01T00:00:00.000Z,
    "applied_by": "Jest",
    "dirty": false,
    "execution_time": 0,
    "hash": "hash-02-do",
    "id": 2,
    "title": "Test Two",
    "type": "do",
    "version": "02",
  },
]
`;
